# PVUGC

./: .gitignore  Cargo.toml  DESIGN.md  HYBRID_STARK_ARCHITECTURE.md  README.md  SECURITY_REVIEW.md  TECHNICAL.md
.cargo/: config.toml
.github/: tsan.supp
.github/workflows/: ci.yml  fuzz.yml
ark-groth16-pvugc/: Cargo.toml
ark-groth16-pvugc/benches/: bench.rs
ark-groth16-pvugc/src/: constraints.rs  data_structures.rs  generator.rs  lib.rs  prover.rs  pvugc_hook.rs  r1cs_to_qap.rs  verifier.rs
audit/: gt-xpdh-reduction-check-2025-02-14.md  security-mutation-tests-2025-02-14.md
crates/lwe-threshold/: Cargo.toml
crates/lwe-threshold/src/: lib.rs  shamir.rs  share_lock.rs
crates/pq-basis-blob/: Cargo.toml
crates/pq-basis-blob/src/: lib.rs
crates/pq-ccolo-wz17/: Cargo.toml
crates/pq-ccolo-wz17/src/: lib.rs
crates/pq-fhe-backend/: Cargo.toml
crates/pq-fhe-backend/src/: lib.rs
crates/pq-fhe-openfhe/: Cargo.toml
crates/pq-fhe-openfhe/src/: lib.rs
crates/pq-stream-tag/: Cargo.toml
crates/pq-stream-tag/src/: lib.rs
crates/test-artifacts/: Cargo.toml
crates/test-artifacts/src/: lib.rs
docs/: PQ.md  STARK_VERIFIER_ARCHITECTURE.md
docs/security/: agm-ssrs-appendix.md  algebraic_framework.md  gbgm-proof.md  gt-xpdh-reduction.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arm_columns.rs  arm_rows.rs  build_column_bases.rs  build_row_bases_from_vk.rs  cross_circuit_k_difference.rs  decap.rs  gamma_vk_grinding.rs  gs_linear_recomb_dlrep.rs  gs_malleation_binding.rs  gs_random_recomb_budget.rs  gt_span_small_coeff.rs  msm_wrong_witness_attack.rs  proof_agnostic_same_statement.rs  statement_k_collision.rs
sp1-keys/: README.md
specs/: PVUGC.md
src/: PVUGC.code-workspace  adaptor_ve.rs  api.rs  arming.rs  bitcoin.rs  coeff_recorder.rs  ct.rs  ctx.rs  decap.rs  dlrep.rs  error.rs  gl_u64.rs  host_api.rs  inner_stark.rs  inner_stark_full.rs  io.rs  key_consistency.rs  lib.rs  mnt6_fixed.rs  nonzero.rs  outer_compressed.rs  poce.rs  poseidon_fr381_t3.rs  ppe.rs  prover_lean.rs  pvugc_aead.rs  pvugc_outer.rs  secp256k1.rs  stark_proof_parser.rs  test_circuits.rs  test_fixtures.rs
src/crypto/: poseidon_merkle_helpers.rs
src/fs/: mod.rs  rpo_gl_constants.rs  rpo_gl_gadget.rs  rpo_gl_host.rs  transcript.rs
src/gadgets/: combiner.rs  fri.rs  gl_fast.rs  gl_range.rs  merkle_batch.rs  mod.rs  rpo_gl.rs  rpo_gl_light.rs  utils.rs
src/pq_we/: blob.rs  mod.rs  types.rs  weights.rs
src/sp1_bridge/: armed_digest.rs  gnark_deserialize.rs  mod.rs
src/stark/: aggregator_air.rs  gl_u64.rs  inner_stark_full.rs  mod.rs  ood_eval_r1cs.rs  stark_proof_parser.rs  test_utils.rs  verifier_stark_groth16.rs
src/stark/crypto/: poseidon_fr377_t3.rs  poseidon_merkle_helpers.rs
src/stark/gadgets/: fri.rs  gl_fast.rs  gl_range.rs  merkle_batch.rs  mod.rs  rpo_gl_light.rs  utils.rs
src/stark/tests/: full_stark_verifier_smoke.rs  gl_fast_unit_tests.rs  poseidon_merkle_selfcheck.rs  recursive_stark_e2e.rs  stark_verifier_comprehensive.rs
src/stark/tests/helpers/: add2.rs  cubic_fib.rs  mod.rs  rpo_compatibility.rs  simple_vdf.rs
src/stark/verifier_air/: aggregator_integration.rs  constraints.rs  fri.rs  hash_chiplet.rs  integration_test.rs  merkle.rs  mod.rs  ood_eval.rs  proof_parser.rs  prover.rs  trace.rs  transcript.rs  verifier_state.rs
src/witness/: mod.rs  winterfell_extract.rs
tests/: bench_bw6_msm.rs  check_relation.rs  confirm_secure_circuit.rs  full_stark_verifier_smoke.rs  gl_fast_unit_tests.rs  inner_v2_smoke.rs  inner_v2_tamper.rs  outer_v2_host_api_smoke.rs  outer_v2_smoke.rs  poseidon_merkle_selfcheck.rs  recursion_stark_smoke.rs  rpo_compatibility.rs  security_mutations.rs  stark_verifier_comprehensive.rs  stark_witness_extraction.rs  test_bitcoin_adaptor.rs  test_c_gap_random_samples.rs  test_implementation_edge_cases.rs  test_lean_prover.rs  test_one_sided_pvugc_e2e.rs  test_one_sided_security.rs  test_recorder_works.rs  test_sp1_e2e.rs  test_span_independence.rs  test_subgroup_guards.rs  test_witness_bases.rs  timing_tost.rs
tests/helpers/: simple_vdf.rs
winterfell-pvugc/: PVUGC_MODIFICATIONS.md
winterfell-pvugc/fri/: Cargo.toml
winterfell-pvugc/fri/src/: lib.rs
winterfell-pvugc/fri/src/verifier/: mod.rs
winterfell-pvugc/verifier/: Cargo.toml
winterfell-pvugc/verifier/src/: channel.rs  lib.rs  pvugc_hooks.rs
winterfell-pvugc/winterfell/: Cargo.toml
winterfell-pvugc/winterfell/src/verifier/: pvugc_hooks.rs
