[workspace]
members = ["."]

[package]
name = "arkworks_groth16"
version = "0.1.0"
edition = "2021"

[lib]
name = "arkworks_groth16"
crate-type = ["rlib"]  # Add rlib for testing

[features]
default = ["r1cs", "parallel", "pvugc-hooks"]
r1cs = ["ark-groth16/r1cs"]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-std/parallel",
]
pvugc-hooks = []

[dependencies]
# Arkworks ecosystem (0.5 for PVUGC compatibility)
ark-bls12-381 = "0.5"
ark-bls12-377 = "0.5"  # BLS12-377 for production (with BW6-761)
ark-bw6-761   = "0.5"  # BW6-761 for production recursion
ark-mnt4-298  = { version = "0.5", features = ["curve", "r1cs"] }  # Lightweight recursion cycle (inner)
ark-mnt6-298  = { version = "0.5", features = ["std", "r1cs"] }   # Lightweight recursion cycle (outer)
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = { path = "ark-groth16-pvugc" }
ark-r1cs-std = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
ark-crypto-primitives = "0.5"
winterfell = { version = "0.13.1", features = ["pvugc-hooks"] } # Patched below
# Direct access to Winterfell internals for witness extraction
winter-crypto = { version = "0.13.1", path = "winterfell-pvugc/crypto" }
winter-math = { version = "0.13.1", path = "winterfell-pvugc/math" }
winter-verifier = { version = "0.13.1", path = "winterfell-pvugc/verifier", features = ["pvugc-hooks"] }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }

# Crypto primitives
sha2 = "0.10"
anyhow = "1.0"  # Error handling for outer compressed
once_cell = "1.19"  # For test fixtures
rayon = "1.10"  # Parallel operations
thiserror = "1.0"
rand_core = "0.6"
subtle = "2.6"
k256 = { version = "0.13", features = ["arithmetic", "schnorr"] }
bitcoin = { version = "0.31", default-features = false, features = ["std"] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.test]
opt-level = 3

[patch.crates-io]
# Use our modified Winterfell with PVUGC witness extraction hooks
winterfell = { path = "winterfell-pvugc/winterfell", features = ["pvugc-hooks"] }
winter-crypto = { path = "winterfell-pvugc/crypto" }
winter-math = { path = "winterfell-pvugc/math" }
winter-utils = { path = "winterfell-pvugc/utils/core" }
winter-air = { path = "winterfell-pvugc/air" }
winter-prover = { path = "winterfell-pvugc/prover" }
winter-verifier = { path = "winterfell-pvugc/verifier", features = ["pvugc-hooks"] }
winter-fri = { path = "winterfell-pvugc/fri", features = ["pvugc-hooks"] }
