[workspace]
members = ["."]

[package]
name = "arkworks_groth16"
version = "0.1.0"
edition = "2021"

[lib]
name = "arkworks_groth16"
crate-type = ["rlib"]  # Add rlib for testing

[features]
default = ["r1cs", "parallel", "pvugc-hooks"]
r1cs = ["ark-groth16/r1cs"]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-std/parallel",
]
pvugc-hooks = []

[dependencies]
# Arkworks ecosystem (0.5 for PVUGC compatibility)
ark-bls12-381 = "0.5"
ark-bls12-377 = "0.5"  # BLS12-377 for production (with BW6-761)
ark-bw6-761   = "0.5"  # BW6-761 for production recursion
ark-mnt4-298  = { version = "0.5", features = ["curve", "r1cs"] }  # Lightweight recursion cycle (inner)
ark-mnt6-298  = { version = "0.5", features = ["std", "r1cs"] }   # Lightweight recursion cycle (outer)
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = { path = "ark-groth16-pvugc" }
ark-r1cs-std = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["crh"] }
# Use released Winterfell without modifications
winterfell = "0.13.1"
winter-crypto = "0.13.1"
winter-math = "0.13.1"
winter-air = "0.13.1"
winter-fri = "0.13.1"
winter-verifier = "0.13.1"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }

# Crypto primitives
sha2 = "0.10"
anyhow = "1.0"  # Error handling for outer compressed
once_cell = "1.19"  # For test fixtures
rayon = "1.10"  # Parallel operations
thiserror = "1.0"
rand_core = "0.6"
subtle = "2.6"
k256 = { version = "0.13", features = ["arithmetic", "schnorr"] }
bitcoin = { version = "0.31", default-features = false, features = ["std"] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release.package.ark-groth16]
incremental = true

[profile.test.package.ark-groth16]
incremental = true
debug-assertions = true
debug = true

[profile.bench.package.ark-groth16]
opt-level = 3
debug = false
incremental = true
debug-assertions = false

[profile.test]
opt-level = 3

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "=0.2.25"
serial_test = "2.0"
