[workspace]
members = [
    ".",
    "crates/pq-fhe-backend",
    "crates/pq-fhe-openfhe",
    "crates/pq-basis-blob",
    "crates/pq-stream-tag",
]

[package]
name = "arkworks_groth16"
version = "0.1.0"
edition = "2021"

[lib]
name = "arkworks_groth16"
crate-type = ["rlib"]  # Add rlib for testing

[features]
default = ["r1cs", "parallel", "pvugc-hooks", "asm"]
r1cs = ["ark-groth16/r1cs"]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-std/parallel",
]
pvugc-hooks = []
asm = [
    "ark-ff/asm",
]
# Enable OpenFHE-backed BFV/BGV evaluator (requires system OpenFHE install + linker flags).
pq-openfhe = ["dep:pq-fhe-openfhe", "pq-stream-tag/pq-openfhe"]
# Use production SP1 Groth16 VK (from sp1-keys/production/)
# Without this, uses empty placeholder (for dev before keys are generated)
sp1-production-vk = []

[dependencies]
# Arkworks ecosystem (0.5 for PVUGC compatibility)
ark-bls12-381 = "0.5"
ark-bls12-377 = "0.5"  # BLS12-377 for production (with BW6-761)
ark-bw6-761   = "0.5"  # BW6-761 for production recursion
ark-mnt4-298  = { version = "0.5", features = ["curve", "r1cs"] }  # Lightweight recursion cycle (inner)
ark-mnt6-298  = { version = "0.5", features = ["std", "r1cs"] }   # Lightweight recursion cycle (outer)
ark-ec = "0.5"
ark-ff = { version = "0.5", features = ["asm", "parallel"] }
ark-groth16 = { path = "ark-groth16-pvugc" }
ark-r1cs-std = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["crh"] }
ark-secp256k1 = { version = "0.5", features = ["r1cs"] }
array-init = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1"

# Crypto primitives
sha2 = "0.10"
anyhow = "1.0"  # Error handling for outer compressed
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"  # For test fixtures
rayon = "1.10"  # Parallel operations
thiserror = "1.0"
rand_core = "0.6"
subtle = "2.6"
hex = "0.4"
k256 = { version = "0.13", features = ["arithmetic", "schnorr"] }
bitcoin = { version = "0.31", default-features = false, features = ["std"] }
ark-poly = "0.5.0"
pq-fhe-backend = { path = "crates/pq-fhe-backend" }
pq-basis-blob = { path = "crates/pq-basis-blob" }
pq-stream-tag = { path = "crates/pq-stream-tag" }
pq-fhe-openfhe = { path = "crates/pq-fhe-openfhe", optional = true }

# SP1 SDK for zkVM proving (use syscoin/sp1 fork)
sp1-sdk = { git = "https://github.com/syscoin/sp1", branch = "pq", features = ["native-gnark"] }


# Dev profile: optimize for faster incremental builds
[profile.dev]
opt-level = 1

# Optimize all dependencies at O3 even in dev mode
# One-time cost on clean build, but speeds up incremental builds
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release.package.ark-groth16]
incremental = true

[profile.test.package.ark-groth16]
incremental = true
debug-assertions = true
debug = true

[profile.bench.package.ark-groth16]
opt-level = 3
debug = false
incremental = true
debug-assertions = false

[profile.test]
opt-level = 3

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "=0.2.25"
serial_test = "2.0"
test-artifacts = { path = "crates/test-artifacts" }
bincode = "1"

[patch.crates-io]
ark-r1cs-std = { git = "https://github.com/syscoin/r1cs-std", rev = "2a28ae9ea3d10e6e55cfa17956464a45228879d2" }
p3-field = { git = "https://github.com/syscoin/p3-field", branch = "main" }
openfhe = { path = "vendor/openfhe" }