[package]
name = "pq-fhe-openfhe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.10"
pq-fhe-backend = { path = "../pq-fhe-backend" }
openfhe = "0.2.0"
pq-basis-blob = { path = "../pq-basis-blob" }
serde_json = "1"

