[package]
name = "pq-stream-tag"
version = "0.1.0"
edition = "2021"

[features]
default = []
pq-openfhe = ["dep:pq-fhe-openfhe"]

[dependencies]
anyhow = "1.0"
hex = "0.4"
rand_core = "0.6"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

pq-fhe-backend = { path = "../pq-fhe-backend" }
pq-basis-blob = { path = "../pq-basis-blob" }
pq-fhe-openfhe = { path = "../pq-fhe-openfhe", optional = true }

